Bug 1009668: Make retrieval of updater.ini more robust and predictable on OSX. r=smichaud,rstrong